# career-os

./: .gitignore  CLAUDE.md  DEPLOYMENT_READINESS.md  Makefile  docker-compose.prod.yml  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  debug_provider.py  e2e_test.py  pdf_production_test.py  pyproject.toml  requirements.txt  ruff.toml  smoke_test.py
backend/app/: main.py
backend/app/agents/: agreement_analysis_agent.py  application_agent.py  ats_agent.py  base.py  career_coach_agent.py  career_value_agent.py  contract_analysis_agent.py  critic_agent.py  cv_agent.py  designer_agent.py  employment_chat_agent.py  fact_extraction_agent.py  generation_pipeline.py  hiring_manager_agent.py  hr_agent.py  interview_agent.py  interview_prep_agent.py  job_agent.py  job_discovery_agent.py  labor_rights_agent.py  payslip_check_agent.py  pipeline.py  review_board_agent.py  salary_agent.py  salary_check_agent.py  salary_prep_agent.py  worktime_check_agent.py
backend/app/core/: audit.py  config.py  deps.py  rate_limit.py  security.py
backend/app/gateway/: __init__.py  audit_writer.py  exceptions.py  execution_service.py  factory.py  gateway.py  interfaces.py  key_resolver.py  pii_scanner.py  policy_service.py  schemas.py  usage_tracker.py
backend/app/providers/: base.py  key_manager.py  litellm_provider.py
backend/app/services/: app_export_templates.py  application_service.py  auth_service.py  automation_service.py  billing_service.py  cache_service.py  cross_document_analysis_service.py  cv_docx_templates.py  cv_pdf_templates.py  cv_service.py  discovery_service.py  document_intelligence_service.py  embedding_service.py  employment_graph_service.py  (+18 more)
backend/tests/: conftest.py  test_match_score.py  test_smoke.py
(+203 files in other folders)
