[project]
name = "careeros-backend"
version = "0.1.0"
description = "CareerOS API — AI-drevet karriereplatform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "supabase>=2.10",
    "litellm>=1.56",
    "cryptography>=44.0",
    "stripe>=11.0",
    "python-multipart>=0.0.18",
    "httpx>=0.28",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "sse-starlette>=2.1",
    "pdfplumber>=0.11",
    "fpdf2>=2.8",
    "python-docx>=1.1",
    "aiofiles>=24.1",
    "redis[asyncio]>=5.0",
    "sentry-sdk[fastapi]>=2.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.14",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# DOCX/export template files bruger intentionelle semikoloner til kompakt XML-formatering
"app/services/app_export_templates.py" = ["E701", "E702", "UP031"]
"app/services/cv_docx_templates.py" = ["E702", "E701"]
# Disse filer bruger lazy imports midt i filen for at undgå cirkulære imports
"app/api/v1/export.py" = ["E402"]
"app/main.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
